Resolves: tdf#113956 Revert ofz#3374 Integer-overflow

This reverts commit 304d42342bd359de97a5863febd992d2ce2f21ca.