emfio/source/reader/mtftools.cxx
@@ -496,7 +496,7 @@ namespace emfio
 
     tools::Rectangle MtfTools::ImplMap( const tools::Rectangle& rRect )
     {
-        return tools::Rectangle(ImplMap(rRect.TopLeft()), ImplMap(rRect.BottomRight()));
+        return tools::Rectangle( ImplMap( rRect.TopLeft() ), ImplMap( rRect.GetSize() ) );
     }
 
     void MtfTools::ImplMap( vcl::Font& rFont )
